Separando o Prontuario e Prontuario Historico
