# src/routes.ts
@@ -10,6 +10,7 @@ import { specialistRouter } from './routes/SpecialistRouter';
 import { AuthRouter } from './routes/AuthRouter';
 import { UserRouter } from './routes/UserRouter';
 import { medicalRecordDetailRouter } from './routes/MedicalRecordDetailRouter';
+import { medicalRecordRouter } from './routes/MedicalRecordRouter';
 
 const router = Router();
 
@@ -28,6 +29,7 @@ router.use('/clients', ClientRouter);
 router.use('/address', AddressRouter);
 router.use('/professions', professionRouter);
 router.use('/specialists', specialistRouter);
-router.use('/medicalrecord', medicalRecordDetailRouter);
+router.use('/medicalrecorddetail', medicalRecordDetailRouter);
+router.use('/medicalrecord', medicalRecordRouter);
 
 export { router };
